fix action button position on smaller screens

--- a/css/app.scss
+++ b/css/app.scss
@@ -802,7 +802,7 @@ textarea.materialize-textarea+label:after {
 @media only screen and (max-width : 768px) {
 
   .action-button-bottom-right {
-  bottom: 75px;
+  bottom: 95px;
   right: 11px;
   }
 
